<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello Reminder!</string>
    <string name="app_name">Reminder</string>
    <string name="add">Add</string>
    <!-- Layout reminder_add -->
    <string name="reminderName">Task</string>
    <string name="reminderNameTip">Your task</string>
    <string name="reminderDetails">Details</string>
    <string name="reminderDetailsTip">Details of your task</string>

    <string name="reminder_list_late">DELAYED</string>
    <string name="reminder_list_today">TODAY</string>
    <string name="reminder_list_nextdays">NEXT DAYS</string>

    <string name="reminderDateStart">Initial Date</string>
    <string name="reminderDateStartTip">DD-MM-AAAA</string>
    <string name="reminderDateStartButton">Choose Initial Date</string>
    <string name="reminderHourStart">Initial Time</string>
    <string name="reminderHourStartTip">HH:MM</string>
    <string name="reminderHourStartButton">Choose Initial Time</string>

    <string name="reminderDateFinal">End Date</string>
    <string name="reminderDateFinalTip">DD-MM-AAAA</string>
    <string name="reminderDateFinalButton">Choose End Date</string>
    <string name="reminderHourFinal">End Time</string>
    <string name="reminderHourFinalTip">HH:MM</string>
    <string name="reminderHourFinalButton">Choose End Time</string>

    <string name="saveButton">Save</string>
    <string name="cancelButton">Cancel</string>

    <!-- Activities title labels -->
    <string name="title_activity_reminder_add">Add</string>
    <string name="title_activity_reminder_edit">Edit</string>
    <!-- ReminderMain context menu -->
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_reminder_title">Reminder</string>
    <!-- Action Bar titles -->
    <string name="menu_addReminder">Add</string>

    <string name="search">Search</string>
    <string name="menu_searchReminder">Search</string>

</resources>
