<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" >

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
      android:id="@+id/txtReminder"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dip"
      android:gravity="right"
      android:text="@string/reminderName"
      android:width="70dip" >
    </TextView>

    <EditText
      android:id="@+id/edtReminder"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="5dip"
      android:layout_toRightOf="@id/txtReminder"
      android:hint="@string/reminderNameTip"
      android:width="290dip" >
    </EditText>

    <TextView
      android:id="@+id/txtDetails"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@id/edtReminder"
      android:layout_marginTop="10dip"
      android:gravity="right"
      android:text="@string/reminderDetails"
      android:width="70dip" >
    </TextView>

    <EditText
      android:id="@+id/edtDetails"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/edtReminder"
      android:layout_marginLeft="5dip"
      android:layout_toRightOf="@id/txtDetails"
      android:hint="@string/reminderDetailsTip"
      android:width="290dip" >
    </EditText>

    <TextView
      android:id="@+id/txtDateStart"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@id/edtDetails"
      android:layout_marginTop="10dip"
      android:gravity="right"
      android:text="@string/reminderDateStart"
      android:width="70dip" >
    </TextView>

    <Spinner
      android:id="@+id/spinnerDateStart"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/edtDetails"
      android:layout_marginLeft="5dip"
      android:layout_toRightOf="@id/txtDateStart"
      android:minWidth="290dip" >
    </Spinner>

    <TextView
      android:id="@+id/txtTimeStart"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@id/spinnerDateStart"
      android:layout_marginTop="10dip"
      android:gravity="right"
      android:text="@string/reminderHourStart"
      android:width="70dip" />

      <Spinner
        android:id="@+id/spinnerTimeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerDateStart"
        android:layout_marginLeft="5dip"
        android:layout_toRightOf="@id/txtTimeStart"
        android:minWidth="290dip" >
      </Spinner>

      <TextView
        android:id="@+id/txtDateFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txtTimeStart"
        android:layout_marginTop="10dip"
        android:gravity="right"
        android:text="@string/reminderDateFinal"
        android:width="70dip" >
      </TextView>

      <Spinner
        android:id="@+id/spinnerDateFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTimeStart"
        android:layout_marginLeft="5dip"
        android:layout_toRightOf="@id/txtDateFinal"
        android:minWidth="290dip" >
      </Spinner>

      <TextView
        android:id="@+id/txtTimeFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/spinnerDateFinal"
        android:layout_marginTop="10dip"
        android:gravity="right"
        android:text="@string/reminderHourFinal"
        android:width="70dip" />

        <Spinner
          android:id="@+id/spinnerTimeFinal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/spinnerDateFinal"
          android:layout_marginLeft="5dip"
          android:layout_toRightOf="@id/txtTimeFinal"
          android:minWidth="290dip" >
        </Spinner>

          <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerTimeFinal"
            android:gravity="center_vertical" >

            <Button
              android:id="@+id/btnSave"
              android:layout_width="0dip"
              android:layout_height="wrap_content"
              android:layout_weight="1.0"
              android:onClick="btnSave_click"
              android:text="@string/saveButton" >
            </Button>

            <Button
              android:id="@+id/btnCancel"
              android:layout_width="0dip"
              android:layout_height="wrap_content"
              android:layout_weight="1.0"
              android:onClick="btnCancel_click"
              android:text="@string/cancelButton" >
            </Button>
          </LinearLayout>
        </RelativeLayout>
      </ScrollView>
